# AbstractAlgorithm

./: CMakeLists.txt  README.md  build.sh
src/: AbstractAlgorithm.cpp  AbstractAlgorithm.h  CMakeLists.txt
test/: CMakeLists.txt  build.sh  run.sh  test.cpp
